修复n个bug，完成加入游戏与退出游戏指令

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
     "name": "斗地主",
     "author": "地窖上的松",
-    "namespace": "doudizhu",
+    "namespace": "DouDiZhu",
     "info": "斗地主",
     "priority": 30000,
     "svn": 1,
